--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "background_color": "#111111",
     "icons": [
       {
-        "src": "icon-96.png",
+        "src": "images/icon-96.png",
         "sizes": "192x192",
         "type": "image/png"
       }
