--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Sinapsi",
     "short_name": "Sinapsi",
     "display": "minimal-ui",
-    "start_url": "/",
+    "start_url": "index.html?launcher=true",
     "theme_color": "#673ab6",
     "background_color": "#111111",
     "icons": [
