--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,18 @@
     "name": "Sinapsi",
     "short_name": "Sinapsi",
     "display": "standalone",
-    "start_url": "index.html?launcher=true",
+    "start_url": "https://detsutut.github.io/sinapsi/index.html",
     "theme_color": "#673ab6",
     "background_color": "#111111",
     "icons": [
       {
         "src": "images/icon-96.png",
         "sizes": "96x96",
+        "type": "image/png"
+      },
+      {
+        "src": "images/icon-144.png",
+        "sizes": "144x144",
         "type": "image/png"
       }
     ]
