--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "Sinapsi",
     "display": "standalone",
     "start_url": "https://detsutut.github.io/sinapsi/index.html",
-    "theme_color": "#673ab6",
-    "background_color": "#111111",
+    "theme_color": "#3498db",
+    "background_color": "#3498db",
     "icons": [
       {
         "src": "images/icon-96.png",
